--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GEOSOLVER.BG е уеб базиран геодезически калкулатор, създаден с цел бързо и лесно решаване на сложни геодезически задачи."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GEOSOLVER.BG - Бъдещето</title>
+    <title>GEOSOLVER.BG - Бъдещето в света на геодезията</title>
 
   </head>
   <body>
